--- a/_config.yml
+++ b/_config.yml
@@ -187,6 +187,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  posters:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -244,6 +247,17 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  #_posters
+  - scope:
+      path: ""
+      type: posters 
+    values:
+      layout: poster
+      author_profile: true
+      share: true
+      comments: true 
+    
+
 
 # Sass/SCSS
 sass:
