--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+# - title: "Publications"
+#   url: /publications/
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
+# - title: "Teaching"
+#   url: /teaching/    
+
   - title: "Portfolio"
     url: /portfolio/
         
@@ -17,6 +17,9 @@ main:
     
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  
+  - title: "Posters"
+    url: /posters/
+#   
+# - title: "Guide"
+#   url: /markdown/
